# studious-umbrella

./: .gitignore  AGENTS.md  MEMORY.md  RELEASE.md  pyproject.toml  requirements.md
.github/workflows/: pr-validation.yml
docs/: development_plan.md  traceability_matrix.md
src/occupant_safety/: __init__.py  settings.py
src/occupant_safety/detection/: __init__.py  events.py
tests/unit/: test_detection_event.py  test_package_bootstrap.py  test_settings.py
