[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "occupant-safety"
version = "0.1.0"
description = "Python safety policy foundation for detecting children or pets left in vehicles."
readme = "requirements.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "SyneticsCorp" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/occupant_safety"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["occupant_safety"]

